# Firewall_Inspired_by_Nftables

./: .gitignore  Doxyfile  README.md
html/: annotated.html  annotated_dup.js  classes.html  common_8c.html  common_8h.html  common_8h.js  common_8h_source.html  core_8c.html  core_8c.js  core_8h.html  core_8h.js  core_8h_source.html  dir_009f605b833ac4622acd6c3c0c26c0f0.html  dir_009f605b833ac4622acd6c3c0c26c0f0.js  dir_111cd2f11cffd6d6d28d89ee0389ee9e.html  dir_111cd2f11cffd6d6d28d89ee0389ee9e.js  dir_3dd30a497388ee684638f120a124721c.html  dir_3dd30a497388ee684638f120a124721c.js  dir_5880318873dbba54eaeafe8b295b00fd.html  dir_5880318873dbba54eaeafe8b295b00fd.js  dir_d070f32a728a03cdee47adce6b71c59a.html  dir_d070f32a728a03cdee47adce6b71c59a.js  dir_dc43877d82dd332f9fb2071fcca799d6.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_c.html  globals_d.html  globals_defs.html  globals_dup.js  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_g.html  globals_h.html  globals_i.html  globals_k.html  (+47 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  (+79 more)
include/: data.h  linux_dep.h
kernel/: Makefile
user/: CMakeLists.txt  myfw.cpp
user/include/: api.h  user_comm.h
user/src/: kernel.c  myfw  myfw.cpp  operate.c  user_comm.c
zsz/: package-lock.json  package.json
(+104 files in other folders)
